Add a preference to use the latest version of pcap2har.py .
When WebpageTest wants to update pcap2har.py, we do so in two phases.  In the first phase, we check it in to an experimental path, and only those agents that ask to use the experimental version use it.  In the second phase, we move the experimental version to stable, so all clients use it.  This change allows the android mobitest agent to opt in to the experimental version of pcap2har.py .

--- a/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
+++ b/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
@@ -24,5 +24,6 @@
 <PreferenceCategory android:title="@string/advanced">
 <EditTextPreference android:key="tcpdump_prio" android:title="@string/tcpdump_prio"></EditTextPreference>
 <EditTextPreference android:key="base_path" android:title="@string/base_path"></EditTextPreference>
+<CheckBoxPreference android:key="use_experimental_pcap2har" android:title="@string/use_experimental_pcap2har" android:defaultValue="false"/>
 </PreferenceCategory>
 </PreferenceScreen>
