--- a/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
+++ b/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
@@ -24,6 +24,6 @@
 <PreferenceCategory android:title="@string/advanced">
 <EditTextPreference android:key="tcpdump_prio" android:title="@string/tcpdump_prio"></EditTextPreference>
 <EditTextPreference android:key="base_path" android:title="@string/base_path"></EditTextPreference>
-<CheckBoxPreference android:key="use_experimental_pcap2har" android:title="@string/use_experimental_pcap2har" android:defaultValue="false"/>
+<CheckBoxPreference android:key="use_experimental_pcap2har" android:title="@string/use_experimental_pcap2har" android:defaultValue="false"/><CheckBoxPreference android:key="process_hars_on_server" android:title="@string/process_hars_on_server" android:defaultValue="false"/>
 </PreferenceCategory>
 </PreferenceScreen>
