Add a preference to let the user control webview scaling.  Make the default work on Android 4.0
BUG=
TEST=Ran on a nexus  4g with Android 4.0 and 2.3.  Saw that webview looked good by efault on both.

Review URL: https://codereview.appspot.com/6344084

--- a/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
+++ b/mobitest-agent/Android/BZAgent/res/xml/preferences.xml
@@ -24,6 +24,12 @@
 <PreferenceCategory android:title="@string/advanced">
 <EditTextPreference android:key="tcpdump_prio" android:title="@string/tcpdump_prio"></EditTextPreference>
 <EditTextPreference android:key="base_path" android:title="@string/base_path"></EditTextPreference>
-<CheckBoxPreference android:key="use_experimental_pcap2har" android:title="@string/use_experimental_pcap2har" android:defaultValue="false"/><CheckBoxPreference android:key="process_hars_on_server" android:title="@string/process_hars_on_server" android:defaultValue="false"/>
+<CheckBoxPreference android:key="use_experimental_pcap2har" android:title="@string/use_experimental_pcap2har" android:defaultValue="false"/>
+<CheckBoxPreference android:key="process_hars_on_server" android:title="@string/process_hars_on_server" android:defaultValue="false"/>
+<EditTextPreference android:key="initial_scale_for_webView"
+                    android:title="@string/initial_scale_for_webView"
+                    android:defaultValue=""
+                    android:numeric="integer"
+                    android:summary="@string/initial_scale_for_webView_summary"/>
 </PreferenceCategory>
 </PreferenceScreen>
